grammar_bnf.txt
** First version PERL**

INIT -> ASSIGNMENT | COMMAND | FUNCTION | CALL


COMMAND -> INTERATIONS | IF 


ASSIGNMENT -> TYPE IDENTIFIER = ARITHMETIC; | TYPE IDENTIFIER; | IDENTIFIER = ARITHMETIC; | IDENTIFIER | ++IDENTIFIER(;)+ | --IDENTIFIER(;)+ | IDENTIFIER++(;)+ | IDENTIFIER--(;)+

IDENTIFIER -> [a-zA-Z][a-zA-Z0-9]*
TYPE -> $ | @

IF -> if(CONDITION){BLOCKCODE} || if(CONDITION){BLOCKCODE}else{BLOCKCODE} | if(CONDITION){BLOCKCODE}ELSIF
ELSIF -> elsif(CONDITION){BLOCKCODE} | elsif(CONDITION){BLOCKCODE}ELSIF2 
ELSIF2 -> ELSIF | else{BLOCKCODE}

INTERATIONS -> FOR | DOWHILE | WHILE 
FOR -> for([ASSIGNMENT]; [CONDITION]; [ASSIGNMENT]){BLOCKCODE}
DOWHILE -> do{BLOCKCODE}WHILE
WHILE -> while(CONDITION){BLOCKCODE}

FUNCTION -> sub IDENTIFIER(){BLOCKCODE} | sub IDENTIFIER(ASSIGNMENT[, ASSIGNMENT]*){BLOCKCODE}

CONDITION -> ATTCOND > ATTCOND | ATTCOND < ATTCOND |
            ATTCOND == ATTCOND | ATTCOND >= ATTCOND |
            ATTCOND <= ATTCOND | ATTCOND != ATTCOND |
            ATTCOND | ((CONDITION) [LOGIC (CONDITION)]*) |
            ATTCOND cmp ATTCOND | ATTCOND eq ATTCOND | 
            ATTCOND ne ATTCOND | ATTCOND lt ATTCOND |
            ATTCOND gt ATTCOND | ATTCOND le ATTCOND |
            ATTCOND ge ATTCOND 



LOGIC -> && | || | ! |

ATTCOND -> ASSIGNMENT | NUMBER | true | false

BLOCKCODE -> COMMAND | ASSIGNMENT; | CALL; | return RETURN; | break; | continue;

RETURN -> ATTCOND | ARITHMETIC

ARITHMETIC -> EXP + EXP | EXP - EXP | EXP * EXP | EXP / EXP | EXP | ( ARITHMETIC )

EXP -> NUMBER | ASSIGNMENT | CALL

NUMBER -> CINTEGER | CFLOAT | CDOUBLE
